--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,8 @@ p {
     z-index: 0;
     opacity: 1;
     pointer-events: none;
+    max-width: 100vw;
+    height: auto;
 }
 
 /* Superior direito */
@@ -95,7 +97,6 @@ p {
     top: 10px;
     right: 10px;
     width: 180px;
-    height: auto;
 }
 
 /* Superior esquerdo */
@@ -103,7 +104,6 @@ p {
     top: 10px;
     left: 10px;
     width: 180px;
-    height: auto;
 }
 
 /* Inferior esquerdo */
@@ -111,7 +111,6 @@ p {
     bottom: 10px;
     left: 10px;
     width: 220px;
-    height: auto;
 }
 
 /* Inferior direito */
@@ -119,7 +118,6 @@ p {
     bottom: 10px;
     right: 10px;
     width: 220px;
-    height: auto;
 }
 
 /* === FONTES PERSONALIZADAS === */
@@ -137,12 +135,14 @@ p {
 @media (max-width: 768px) {
     .birthday-gif,
     .birthday-gif2 {
-        width: 120px;
+        width: 120px !important;
+        top: 5px;
     }
 
     .birthday-gif3,
     .birthday-gif4 {
-        width: 150px;
+        width: 150px !important;
+        bottom: 5px;
     }
 
     h1 {
@@ -161,16 +161,16 @@ p {
     }
 }
 
-/* Responsivo ainda menor: celulares bem estreitos */
+/* Responsivo ainda menor: celulares estreitos (tipo iPhone SE) */
 @media (max-width: 480px) {
     .birthday-gif,
     .birthday-gif2 {
-        width: 90px;
+        width: 90px !important;
     }
 
     .birthday-gif3,
     .birthday-gif4 {
-        width: 120px;
+        width: 120px !important;
     }
 
     h1 {
