--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ p {
     max-width: 100%;
 }
 
-/* === BALÕES FIXOS NOS CANTOS (MAIORES) === */
+/* === BALÕES NOS CANTOS === */
 .birthday-gif,
 .birthday-gif2,
 .birthday-gif3,
@@ -88,36 +88,38 @@ p {
     z-index: 0;
     opacity: 1;
     pointer-events: none;
-    max-width: 100vw;
-    height: auto;
 }
 
 /* Superior direito */
 .birthday-gif {
     top: 10px;
     right: 10px;
-    width: 180px;
+    width: 15vw;
+    max-width: 180px;
 }
 
 /* Superior esquerdo */
 .birthday-gif2 {
     top: 10px;
     left: 10px;
-    width: 180px;
+    width: 15vw;
+    max-width: 180px;
 }
 
 /* Inferior esquerdo */
 .birthday-gif3 {
     bottom: 10px;
     left: 10px;
-    width: 220px;
+    width: 18vw;
+    max-width: 220px;
 }
 
 /* Inferior direito */
 .birthday-gif4 {
     bottom: 10px;
     right: 10px;
-    width: 220px;
+    width: 18vw;
+    max-width: 220px;
 }
 
 /* === FONTES PERSONALIZADAS === */
@@ -133,18 +135,6 @@ p {
 
 /* === RESPONSIVIDADE === */
 @media (max-width: 768px) {
-    .birthday-gif,
-    .birthday-gif2 {
-        width: 120px !important;
-        top: 5px;
-    }
-
-    .birthday-gif3,
-    .birthday-gif4 {
-        width: 150px !important;
-        bottom: 5px;
-    }
-
     h1 {
         font-size: 2.2em;
     }
@@ -161,23 +151,26 @@ p {
     }
 }
 
-/* Responsivo ainda menor: celulares estreitos (tipo iPhone SE) */
 @media (max-width: 480px) {
-    .birthday-gif,
-    .birthday-gif2 {
-        width: 90px !important;
-    }
-
-    .birthday-gif3,
-    .birthday-gif4 {
-        width: 120px !important;
-    }
-
     h1 {
         font-size: 1.8em;
     }
 
     p {
         font-size: 1.2em;
+    }
+
+    .birthday-gif,
+    .birthday-gif2 {
+        width: 20vw;
+        max-width: 90px;
+        top: 5px;
+    }
+
+    .birthday-gif3,
+    .birthday-gif4 {
+        width: 24vw;
+        max-width: 120px;
+        bottom: 5px;
     }
 }
